--- a/index_test_play_video.html
+++ b/index_test_play_video.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Inline Video Test</title>
+    <title>视频可播放性测试</title>
     <style>
       video {
         position: absolute;
